--- a/KnowledgeApp/KnowledgeApp.Android/KnowledgeApp.Android.csproj
+++ b/KnowledgeApp/KnowledgeApp.Android/KnowledgeApp.Android.csproj
@@ -92,6 +92,9 @@
       <Name>KnowledgeApp</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\add.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
