1st: Added new model Category and updated database structure 2nd: Connected to Azure databse 3rd: Update web services 4th: Added home page and workedon UI part

--- a/BanckendKnowledgeHubAPI/appsettings.json
+++ b/BanckendKnowledgeHubAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=KnowledgeHubDB;Trusted_Connection=True;"
+    "DefaultConnection": "Server=tcp:knowledgehubserver.database.windows.net,1433;Initial Catalog=KnowledgeHubDB;Persist Security Info=False;User ID=kushagra;Password=Kush#215;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
